--- a/lang/lang.en-US.json
+++ b/lang/lang.en-US.json
@@ -3,36 +3,25 @@
     "displayEmbeds": {
       "welcome": {
         "title": "Thank you for using {{COM:bot.name}}!",
-        "description": [
-          "{{REF:bot.description}}"
-        ],
+        "description": ["{{REF:bot.description}}"],
         "fields": [
           {
             "name": "Important {{REF:fields.commands}}",
-            "value": [
-              "{{CMD_LINK_HELP}} - {{REF:commandDescs.help}}"
-            ]
+            "value": ["{{CMD_LINK_HELP}} - {{REF:commandDescs.help}}"]
           },
           {
             "name": "{{REF:fields.links}}",
-            "value": [
-              "{{REF:links.docsEmbed}}",
-              "{{REF:links.supportEmbed}}"
-            ]
+            "value": ["{{REF:links.docsEmbed}}", "{{REF:links.supportEmbed}}"]
           }
         ]
       },
       "helpContactSupport": {
         "title": "Help - {{REF:helpOptions.contactSupport}}",
-        "description": [
-          "Have a question or feedback? Join our support server at the link below!"
-        ],
+        "description": ["Have a question or feedback? Join our support server at the link below!"],
         "fields": [
           {
             "name": "{{REF:fields.links}}",
-            "value": [
-              "{{REF:links.supportEmbed}}"
-            ]
+            "value": ["{{REF:links.supportEmbed}}"]
           }
         ]
       },
@@ -56,10 +45,7 @@
           },
           {
             "name": "{{REF:fields.links}}",
-            "value": [
-              "{{REF:links.docsEmbed}}",
-              "{{REF:links.supportEmbed}}"
-            ]
+            "value": ["{{REF:links.docsEmbed}}", "{{REF:links.supportEmbed}}"]
           }
         ]
       },
@@ -71,6 +57,10 @@
       },
       "viewDateSent": {
         "description": "This message was sent on {{DATE}}!"
+      },
+      "devOnboarding": {
+        "title": "About Digital Ground Game Dev Team",
+        "description": "{{CONTENT}}"
       },
       "about": {
         "title": "{{COM:bot.name}} - About",
@@ -94,9 +84,7 @@
           },
           {
             "name": "Created With",
-            "value": [
-              "{{REF:links.templateEmbed}}"
-            ]
+            "value": ["{{REF:links.templateEmbed}}"]
           }
         ]
       },
@@ -224,7 +212,8 @@
       "census": "census"
     },
     "userCommands": {
-      "viewDateJoined": "View Date Joined"
+      "viewDateJoined": "View Date Joined",
+      "sendDevOnboarding": "Send Dev Onboarding"
     },
     "messageCommands": {
       "viewDateSent": "View Date Sent"
