Enhance bot functionality and configuration
- Added maxTotalThreads configuration to config.json.
- Updated welcomeMessage in config.json for improved clarity and community engagement.
- Introduced guildMemberUpdate event handling in start-bot.ts and bot.ts.
- Added OnboardingStateService and AutoCloseWelcomeThreadsJob to relevant files.
- Updated logs.json to include error message for guild member updates.

--- a/lang/logs.json
+++ b/lang/logs.json
@@ -44,6 +44,7 @@
     "updatedServerCountSite": "An error occurred while updating the server count on '{BOT_SITE}'.",
     "guildJoin": "An error occurred while processing a guild join.",
     "guildLeave": "An error occurred while processing a guild leave.",
+    "guildMemberUpdate": "An error occurred while processing a guild member update.",
     "message": "An error occurred while processing a message.",
     "reaction": "An error occurred while processing a reaction.",
     "command": "An error occurred while processing a command interaction.",
