--- a/lang/lang.en-US.json
+++ b/lang/lang.en-US.json
@@ -157,6 +157,22 @@
           "Required permissions: {{PERMISSIONS}}"
         ],
         "color": "{{COM:colors.warning}}"
+      },
+      "nullMember" : {
+        "title": "Null Member",
+        "description": "Null member on interaction"
+      },
+      "missingRole": {
+        "title": "Permission Denied",
+        "description": [
+          "You do not have permission to use this command.",
+          "",
+          "Valid roles: {{ROLES}}"
+        ]
+      },
+      "guildOnly": {
+        "title": "Server Only",
+        "description": "This command can only be used in a server."
       }
     },
     "errorEmbeds": {
